tests/baselines/reference/parserReturnStatement4.errors.txt
==== tests/cases/conformance/parser/ecmascript5/Statements/ReturnStatements/parserReturnStatement4.ts (1 errors) ====
    var v = { get foo() { return } };
                  ~~~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.